[package]
name = "rust_week_four"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
