[package]
name = "kyle_tinylang"
version = "0.1.0"
description = "Rust week four, byo programming langauge"
edition = "2024"
readme = "README.md"
license = "MIT"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
